# libft

./: .Makefile.swp  .ft_memcpy.c.swp  .gitignore  .gitmodules  CMakeLists.txt  Makefile  TODO  ft_atoi_base.c  ft_bzero.c  ft_free_chartab.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_str_to_wordtab.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlcr.c  ft_strlen.c  ft_strsub.c  ft_strtrim.c  ft_tabdup.c  ft_tablen.c  libft.h
.github/: config.yml
done/: ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_strclr.c  ft_strcpy.c  ft_strjoin.c  ft_strncpy.c  ft_strsub.c
ft_putchar/: .ft_putchar.c.un~  ft_putchar.c
ft_putendl/: ft_putendl.c
ft_putstr/: .ft_putstr.c.un~  ft_putstr.c
ft_strclr/: .ft_strlcr.c.un~  ft_strlcr.c
ft_strlen/: .ft_strlen.c.un~  ft_strlen.c
includes/: .libft.h.swp  libft.h
includes/core/: core.h
includes/ft_printf/core/: struct.h
includes/unistd/: ft_unistd.h
srcs/: ft_itoa.c  ft_memset.c  ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_strclr.c  ft_strjoin.c  ft_strsub.c  ft_strtrim.c
srcs/core/: ft_add_to_array.c  ft_arraylen.c  ft_atoi.c  ft_atoi_base.c  ft_atoi_nbase.c  ft_binlen.c  ft_bzero.c  ft_cat.c  ft_charwlen.c  ft_ctostr.c  ft_free_array.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_base_l.c  ft_itoa_base_ll.c  ft_itoa_base_uint.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nblen.c  ft_nblen_l.c  ft_nblen_ll.c  ft_power.c  ft_print_array.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  (+43 more)
srcs/ft_printf/checks/: check_flags.c  check_precision_max.c  check_spaces.c  check_width.c
srcs/ft_printf/color/: color.c  color2.c  color3.c
srcs/ft_printf/convert/: convert_c.c  convert_d.c  convert_jzlh.c  convert_o.c  convert_p.c  convert_percent.c  convert_r.c  convert_s.c  convert_u.c  convert_x.c
srcs/ft_printf/core/: ft_printf.c  parser.c  utils.c
srcs/ft_printf/print/: print_d.c  print_o.c  print_u.c  print_x.c  print_xx.c
srcs/get_next_line/: get_next_line.c
srcs/unistd/: ft_getopt.c
todo/: ft_itoa_base.c
